fix<EndingKoala >: button wrong position

--- a/src/containers/EndingKoala/styles.module.scss
+++ b/src/containers/EndingKoala/styles.module.scss
@@ -37,7 +37,7 @@
     }
 
     &Right {
-      align-items: end;
+      align-items: flex-end;
     }
 
     .button {
